# BootSectorInstaller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure.sh
include/: mbr.h  vbr.h
include/lang/: en.h
include/lib/: default.h
src/: main.c  mbr.c  vbr.c
src/lib/: default.c
